# tap-socketdev

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml  renovate.json5
.github/workflows/: constraints.txt  release.yaml  test.yml
tap_socketdev/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
