[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.27",
]

[project]
name = "tap-socketdev"
description = "Singer tap for Socket, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "singer.io",
  "Socket",
]
license = "Apache-2.0"
authors = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]

dependencies = [
  "requests~=2.32.0",
  "singer-sdk~=0.48.0",
  "typing-extensions>=4.14.1; python_full_version<'3.12'",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-socketdev#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-socketdev"
urls.Repository = "https://github.com/edgarrmondragon/tap-socketdev"
scripts.tap-socketdev = "tap_socketdev.tap:TapSocketDev.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
ci = [
  "pytest-github-actions-annotate-failures>=0.3",
]
testing = [
  "pytest~=8.0",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.8",
  "ty>=0.0.1a18",
  "types-requests~=2.32.0",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "INP001", # implicit-namespace-package
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "backoff.*",
]
