[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-socketdev"
description = "Singer tap for Socket, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "singer.io",
  "Socket",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "requests~=2.33.0",
  "singer-sdk~=0.54.0a4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-socketdev = "tap_socketdev.tap:TapSocketDev.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-socketdev#readme"
Homepage = "https://github.com/reservoir-data/tap-socketdev"
Repository = "https://github.com/reservoir-data/tap-socketdev"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
ci = [
  "pytest-github-actions-annotate-failures>=0.3",
]
testing = [
  "pytest~=9.0",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.9",
  "ty>=0.0.21",
  "types-requests~=2.33.0",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "INP001", # implicit-namespace-package
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [ "-vvv", "-ra", "--strict-config", "--strict-markers" ]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]
xfail_strict = true

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
